collapse-fix

--- a/css/style.css
+++ b/css/style.css
@@ -2145,3 +2145,7 @@ textarea.form-control {
 .container-data .accordion-item:first-of-type .accordion-button {
   background: #F5F5F5 !important;
 }
+
+.container-data .text-secondary {
+  color: #18243E!important;
+}
